--- a/src/index.css
+++ b/src/index.css
@@ -100,3 +100,14 @@
 .no-scrollbar::-webkit-scrollbar {
   display: none; /* Chrome, Safari, and Opera */
 }
+
+.parent-center {
+  position: relative;
+}
+
+.child-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
